--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -28,3 +28,7 @@
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
+
+iframe[hidden] {
+  @apply hidden;
+}
