--- a/lib/app_web/templates/layout/_footer.html.eex
+++ b/lib/app_web/templates/layout/_footer.html.eex
@@ -1,7 +1,7 @@
-<div class="bg-blue-50">
+<div class="bg-gray-800">
   <div class="max-w-screen-xl px-4 py-12 mx-auto sm:px-6 md:flex md:items-center md:justify-between lg:px-8">
     <div class="flex justify-center md:order-2">
-      <a href="https://github.com/ssuprunenko" class="ml-6 text-gray-500 hover:text-gray-700" target="_blank">
+      <a href="https://github.com/ssuprunenko" class="ml-6 text-gray-400 hover:text-gray-300" target="_blank">
         <span class="sr-only">GitHub</span>
         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
           <path fill-rule="evenodd"
@@ -10,7 +10,7 @@
         </svg>
       </a>
 
-      <a href="https://twitter.com/s_suprunenko" class="ml-6 text-gray-500 hover:text-gray-700" target="_blank">
+      <a href="https://twitter.com/s_suprunenko" class="ml-6 text-gray-400 hover:text-gray-300" target="_blank">
         <span class="sr-only">Twitter</span>
         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
           <path
@@ -19,7 +19,7 @@
       </a>
     </div>
     <div class="mt-8 md:mt-0 md:order-1">
-      <p class="text-base leading-6 text-center text-gray-500">
+      <p class="text-base leading-6 text-center text-gray-400">
         &copy; 2020 How To Learn
       </p>
     </div>
