--- a/lib/app_web/templates/layout/root.html.leex
+++ b/lib/app_web/templates/layout/root.html.leex
@@ -16,9 +16,9 @@
     <script defer phx-track-static type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
     <script async defer data-domain="howtolearn.link" src="https://plausible.io/js/plausible.js"></script>
   </head>
-  <body class="bg-light-blue-50">
+  <body class="flex flex-col justify-between h-screen">
     <%= render "_header.html", conn: @conn, skill: assigns[:skill], current_user: assigns[:current_user] %>
-    <%= @inner_content %>
+    <div class="flex-1"><%= @inner_content %></div>
     <%= render "_footer.html", conn: @conn %>
   </body>
 </html>
